# demucs-service

./: .firebaserc  .gitignore  .prettierrc  README.md  Taskfile.yml  astro.config.mjs  cloudbuild.yaml  firebase.json  package-lock.json  package.json  tailwind.config.cjs
docs/: environment.yml  mkdocs.yml
docs/docs/: api.md  index.md
docs/docs/arch/: artifact-registry.md  cloud-build.md  cloud-run.md  firebase.md  index.md  model-api.md  webapp.md
model/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  environment.yml  pyproject.toml
model/data/sample/: README.md  mixture-3s.b64  mixture-3s.json  mixture.b64  mixture.json
model/src/: .gitignore  api.py  config.py  download.py  model.py  test_separate.py
src/: firebase.js
src/components/: FirebaseLogin.svelte  Layout.astro  UploadFile.svelte
src/components/global/: BaseHead.astro  SiteFooter.astro
src/pages/: index.astro
src/stores/: auth.ts
src/styles/: index.css
